# papouch_ros

./: .gitmodules  README.md
papouch_ros/: CMakeLists.txt  README.md  package.xml  setup.cfg
papouch_ros/config/: schunk_gripper_parameters.yaml
papouch_ros/launch/: quido.launch.py  quido_test.launch.py  quido_usb.launch  schunk_gripper.launch  schunk_gripper.launch.py  schunk_gripper_test.launch.py
papouch_ros/papouch_ros/: launch_helpers.py  launch_helpers_common.py  node_utils.py  quido_node.py  quido_test.py  schunk_gripper_node.py  schunk_gripper_parameters.yaml  schunk_gripper_test.py
papouch_ros/scripts/: quido_node  schunk_gripper_node
papouch_ros/test_scripts/: quido_test.sh  schunk_gripper_test.sh  ws_build.sh  ws_get.sh
papouch_ros_idl/: CMakeLists.txt  README.md  package.xml
papouch_ros_idl/srv/: WriteIO.srv
