<?xml version="1.0"?>
<package format="3">
  <name>papouch_ros</name>
  <version>0.1.0</version>
  <description>The papouch ROS package</description>

  <maintainer email="libor.wagner@cvut.cz">Libor Wagner</maintainer>
  <license>b635</license>

  <!-- Build dependencies. -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>
  <build_depend>generate_parameter_library_py</build_depend>

  <!-- ROS dependencies. -->
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>generate_parameter_library_py</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>papouch_ros_idl</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Dependencies for the papouch packages -->
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>papouch_ros_idl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
