[options.entry_points]
console_scripts =
    quido_node = papouch_ros.quido_node:main
    quido_test = papouch_ros.quido_test:main
    schunk_gripper_node = papouch_ros.schunk_gripper_node:main
    schunk_gripper_test = papouch_ros.schunk_gripper_test:main
    quido-list = papouch.scripts.list:main
    quido-cli = papouch.scripts.cli:main
