<?xml version="1.0"?>
<package format="3">
  <name>papouch_ros_idl</name>
  <version>0.1.0</version>
  <description>The papouch ROS messages</description>

  <maintainer email="libor.wagner@cvut.cz">Libor Wagner</maintainer>
  <license>b635</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
